# Solis-Cloud

./: setup.cfg
custom_components/solis/: hooks.py  patches.txt  setup.cfg
