[metadata]
name = solis_cloud
version = 1.0
author = GS Kishan
author_email = gskishan123@gmail.com
description = Test package
long_description = file: README.md
long_description_content_type = text/markdown
url = soliscloud.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
